ajuste do tamanho dos arquivos

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1473,7 +1473,9 @@ google-metadata.enable = true
 
 # Where to temporarily store uploaded files
 upload.temp.dir = ${dspace.dir}/upload
+spring.servlet.multipart.max-file-size = 100MB
 
+spring.servlet.multipart.max-request-size = 100MB
 ###### Statistical Report Configuration Settings ######
 
 # should the stats be publicly available?  should be set to false if you only
