Configuração REST [cors]

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1476,6 +1476,9 @@ upload.temp.dir = ${dspace.dir}/upload
 spring.servlet.multipart.max-file-size = 100MB
 
 spring.servlet.multipart.max-request-size = 100MB
+
+rest.cors.allowed-origins = ${dspace.ui.url}
+rest.cors.allow-credentials = true
 ###### Statistical Report Configuration Settings ######
 
 # should the stats be publicly available?  should be set to false if you only
