--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -50,6 +50,9 @@ dspace.shortname = DSpace
 # Default language for metadata values
 default.language = en_US
 
+#teste
+server.servlet.frame-options = SAMEORIGIN
+
 # Solr server/webapp.
 # DSpace uses Solr for all search/browse capability (and for usage statistics).
 # Since DSpace 7, SOLR must be installed as a stand-alone service.
