--- a/docker-compose-cli.yml
+++ b/docker-compose-cli.yml
@@ -3,7 +3,7 @@ networks:
   # Its full name will be prepended with the project name (e.g. "-p d7" means it will be named "d7_dspacenet")
   default:
     name: ${COMPOSE_PROJECT_NAME}_dspacenet
-    external: true
+    external: false
 services:
   dspace-cli:
     image: "${DOCKER_OWNER:-dspace}/dspace-cli:${DSPACE_VER:-latest}"
