--- a/.github/workflows/interacoes-dev-deploy.yml
+++ b/.github/workflows/interacoes-dev-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend (DSpace) - Branch develop
+name: Deploy Backend (DSpace) - Branch develop 01-09-2025
 
 on:
   workflow_dispatch:
