--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -36,8 +36,8 @@ dspace.server.ssr.url = ${dspace.server.url}
 # This is used by the backend to provide links in emails, RSS feeds, Sitemaps, etc.
 # NOTE: this URL must be accessible to all DSpace users (should not use 'localhost' in Production).
 # It corresponds to the URL that you would type into your browser to access the User Interface.
-dspace.ui.url = https://angular-dspace.dev.interacoes.ltap.ifce.edu.br
-# http://localhost:4000
+#dspace.ui.url = https://angular-dspace.dev.interacoes.ltap.ifce.edu.br
+dspace.ui.url = http://localhost:4000
 
 # Name of the site
 dspace.name = DSpace at My University
