datacite.publicationimport.entityfilterquery=

--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -238,3 +238,4 @@ db.password = @abcd1234
 #  LDN INBOX SETTINGS  #
 ########################
 ldn.enabled = true
+datacite.publicationimport.entityfilterquery=
