--- a/.github/workflows/interacoes-dev-deploy.yml
+++ b/.github/workflows/interacoes-dev-deploy.yml
@@ -27,13 +27,19 @@ jobs:
         run: |
           cat <<EOF > dspace/config/local.cfg
           dspace.dir=/volumes/dspaceinstall
-          dspace.server.url = https://dpace.dev.interacoes.ltap.ifce.edu.br/server
+          dspace.server.url = https://dspace.dev.interacoes.ltap.ifce.edu.br/server
+          dspace.server.ssr.url = ${dspace.server.url}
           dspace.ui.url = https://angular-dspace.dev.interacoes.ltap.ifce.edu.br
-          dspace.name = InterAções
+          dspace.name = Interações
+          assetstore.dir = ${dspace.dir}/assetstore
           default.language = pt_BR
+          solr.server = http://localhost:8983/solr
           db.url = jdbc:postgresql://localhost:5432/dspace
           db.username = dspace
           db.password = @abcd1234
+          handle.prefix = 123456789
+          #spring.servlet.multipart.max-file-size = 512MB
+          #spring.servlet.multipart.max-request-size = 512MB
           ldn.enabled = true
           EOF
 
