Ativando o swordv2-server.cfg.

--- a/dspace/config/modules/swordv2-server.cfg
+++ b/dspace/config/modules/swordv2-server.cfg
@@ -10,19 +10,19 @@
 # When "true", the SWORD v2 module is accessible on ${swordv2-server.path}
 # When "false" or commented out, SWORD v2 is disabled/inaccessible.
 # (Requires reboot of servlet container, e.g. Tomcat, to reload)
-#swordv2-server.enabled = true
+swordv2-server.enabled = true
 
  # Path where SWORD v2 module is available (in the Spring Server webapp)
 # Defaults to "swordv2", which means the SWORD v2 module would be available
 # at ${dspace.server.url}/swordv2/
 # (Requires reboot of servlet container, e.g. Tomcat, to reload)
-#swordv2-server.path = swordv2
+swordv2-server.path = swordv2
 
 # the base url of the sword 2.0  system
 #
 # the default if {dspace.server.url}/swordv2
 #
-#swordv2-server.url = http://www.myu.ac.uk/swordv2
+swordv2-server.url = ${dspace.server.url}/swordv2
 
 # The base URL of the SWORD collection.  This is the URL from
 # which DSpace will construct the deposit location urls for
@@ -35,7 +35,7 @@
 # incorrect URLs, and you should override the functionality
 # by specifying in full as below:
 #
-# swordv2-server.collection.url = http://www.myu.ac.uk/swordv2/collection
+swordv2-server.collection.url = ${dspace.server.url}/swordv2/swordv2/collection
 
 # The base URL of the SWORD service document.  This is the
 # URL from which DSpace will construct the service document
@@ -48,7 +48,7 @@
 # incorrect URLs, and you should override the functionality
 # by specifying in full as below:
 #
-# swordv2-server.servicedocument.url = http://www.myu.ac.uk/swordv2/servicedocument
+swordv2-server.servicedocument.url = ${dspace.server.url}/swordv2/servicedocument
 
 # The accept packaging properties, along with their associated
 # quality values where appropriate.
