--- a/.github/workflows/interacoes-tst-deploy.yml
+++ b/.github/workflows/interacoes-tst-deploy.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Criar arquivo local.cfg (configuração DSpace)
         run: |
           cat <<EOF > dspace/config/local.cfg
-          dspace.dir = /volumes/interacoes/dspaceinstall
-          dspace.server.url = https://dspace.tst.interacoes.ltap.ifce.edu.br/server
-          dspace.server.ssr.url = https://dspace.tst.interacoes.ltap.ifce.edu.br/server
-          dspace.ui.url = https://dspace.tst.interacoes.ltap.ifce.edu.br
+          dspace.dir = /volumes/dspaceinstall
+          dspace.server.url = https://interacoes.ltap.ifce.edu.br/server
+          dspace.server.ssr.url = https://interacoes.ltap.ifce.edu.br/server
+          dspace.ui.url = https://interacoes.ltap.ifce.edu.br
           dspace.name = InterAções - SASE/MEC
           dspace.shortname = InterAções
           default.language = pt_BR
