--- a/.github/workflows/interacoes-tst-deploy.yml
+++ b/.github/workflows/interacoes-tst-deploy.yml
@@ -27,9 +27,9 @@ jobs:
         run: |
           cat <<EOF > dspace/config/local.cfg
           dspace.dir = /volumes/dspaceinstall
-          dspace.server.url = https://interacoes.ltap.ifce.edu.br/server
-          dspace.server.ssr.url = https://interacoes.ltap.ifce.edu.br/server
-          dspace.ui.url = https://interacoes.ltap.ifce.edu.br
+          dspace.server.url = https://www.interacoes.ltap.ifce.edu.br/server
+          dspace.server.ssr.url = https://www.interacoes.ltap.ifce.edu.br/server
+          dspace.ui.url = https://www.interacoes.ltap.ifce.edu.br
           dspace.name = InterAções - SASE/MEC
           dspace.shortname = InterAções
           default.language = pt_BR
