configuração dspace.cfg.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -145,18 +145,21 @@ db.removeabandonedtimeout = 300
 ##### Email settings ######
 
 # SMTP mail server (allows DSpace to send email notifications)
-mail.server = smtp.example.com
+mail.server = smtp.gmail.com
 
 # SMTP mail server authentication username and password (if required)
-#mail.server.username =
-#mail.server.password =
+mail.server.username = viviankailanymarques@gmail.com
+mail.server.password = lytf fwjw bkjk olvj
 
 # SMTP mail server alternate port (defaults to 25)
-mail.server.port = 25
+mail.server.port = 587
+
+# STARTTLS
+mail.server.starttls.enable = true
 
 # From address for mail
 # All mail from the DSpace site will use this 'from' address
-mail.from.address = dspace-noreply@myu.edu
+mail.from.address = viviankailanymarques@gmail.com
 
 # Name of a pre-configured Session object to be fetched from a directory.
 # This overrides the Session settings above.  If none can be found, then DSpace
@@ -166,11 +169,11 @@ mail.from.address = dspace-noreply@myu.edu
 # When feedback is submitted via the Feedback form, it is sent to this address
 # Currently limited to one recipient!
 # if this property is empty or commented out, feedback form is disabled
-feedback.recipient = dspace-help@myu.edu
+feedback.recipient = viviankailanymarques@gmail.com
 
 # General site administration (Webmaster) e-mail
 # System notifications/reports and other sysadmin emails are sent to this address
-mail.admin = dspace-help@myu.edu
+mail.admin = viviankailanymarques@gmail.com
 mail.admin.name = DSpace Administrator
 
 # Helpdesk E-mail
