configuração dspace.cfg.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -187,7 +187,7 @@ alert.recipient = ${mail.admin}
 #registration.notify =
 
 # Enable a "welcome letter" to the newly-registered user.
-mail.welcome.enabled = false
+mail.welcome.enabled = true
 
 # Set the default mail character set. This may be overridden by providing a line
 # inside the email template "charset: <encoding>", otherwise this default is used.
