configuração dspace.cfg.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -145,21 +145,18 @@ db.removeabandonedtimeout = 300
 ##### Email settings ######
 
 # SMTP mail server (allows DSpace to send email notifications)
-mail.server = smtp.gmail.com
+mail.server = smtp.example.com
 
 # SMTP mail server authentication username and password (if required)
-mail.server.username = viviankailanymarques@gmail.com
-mail.server.password = lytf fwjw bkjk olvj
+#mail.server.username =
+#mail.server.password =
 
 # SMTP mail server alternate port (defaults to 25)
-mail.server.port = 587
-
-# STARTTLS
-mail.server.starttls.enable = true
+mail.server.port = 25
 
 # From address for mail
 # All mail from the DSpace site will use this 'from' address
-mail.from.address = viviankailanymarques@gmail.com
+mail.from.address = dspace-noreply@myu.edu
 
 # Name of a pre-configured Session object to be fetched from a directory.
 # This overrides the Session settings above.  If none can be found, then DSpace
@@ -169,11 +166,11 @@ mail.from.address = viviankailanymarques@gmail.com
 # When feedback is submitted via the Feedback form, it is sent to this address
 # Currently limited to one recipient!
 # if this property is empty or commented out, feedback form is disabled
-feedback.recipient = viviankailanymarques@gmail.com
+feedback.recipient = dspace-help@myu.edu
 
 # General site administration (Webmaster) e-mail
 # System notifications/reports and other sysadmin emails are sent to this address
-mail.admin = viviankailanymarques@gmail.com
+mail.admin = dspace-help@myu.edu
 mail.admin.name = DSpace Administrator
 
 # Helpdesk E-mail
@@ -187,7 +184,7 @@ alert.recipient = ${mail.admin}
 #registration.notify =
 
 # Enable a "welcome letter" to the newly-registered user.
-mail.welcome.enabled = true
+mail.welcome.enabled = false
 
 # Set the default mail character set. This may be overridden by providing a line
 # inside the email template "charset: <encoding>", otherwise this default is used.
