--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -36,7 +36,8 @@ dspace.server.ssr.url = ${dspace.server.url}
 # This is used by the backend to provide links in emails, RSS feeds, Sitemaps, etc.
 # NOTE: this URL must be accessible to all DSpace users (should not use 'localhost' in Production).
 # It corresponds to the URL that you would type into your browser to access the User Interface.
-dspace.ui.url = https://angular-dspace.tst.interacoes.ltap.ifce.edu.br
+dspace.ui.url = https://dspace.tst.interacoes.ltap.ifce.edu.br
+# dspace.ui.url = http://localhost:4000
 
 # Name of the site
 dspace.name = DSpace at My University
@@ -789,7 +790,11 @@ event.dispatcher.default.class = org.dspace.event.BasicDispatcher
 # Add rdf here, if you are using dspace-rdf to export your repository content as RDF.
 # Add iiif here, if you are using dspace-iiif.
 # Add orcidqueue here, if the integration with ORCID is configured and wish to enable the synchronization queue functionality
-event.dispatcher.default.consumers = versioning, discovery, eperson, qaeventsdelete, ldnmessage
+event.dispatcher.default.consumers = versioning, discovery, eperson, qaeventsdelete, ldnmessage, itemsubmitterpolicy
+
+event.consumer.itemsubmitterpolicy.class = org.dspace.event.ItemSubmitterPolicyConsumer
+event.consumer.itemsubmitterpolicy.filters = Item+Install
+
 
 # The noindex dispatcher will not create search or browse indexes (useful for batch item imports)
 event.dispatcher.noindex.class = org.dspace.event.BasicDispatcher
@@ -1473,6 +1478,9 @@ google-metadata.enable = true
 
 # Where to temporarily store uploaded files
 upload.temp.dir = ${dspace.dir}/upload
+spring.servlet.multipart.max-file-size = 100MB
+
+spring.servlet.multipart.max-request-size = 100MB
 
 ###### Statistical Report Configuration Settings ######
 
